# No-Propagation

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/diffusion/: diffusion_model.cpp  diffusion_model.hpp  diffusion_model_noProp.cpp  diffusion_model_noProp.hpp  noise.cpp  noise.hpp
src/neural_network/: activation.cpp  activation.hpp  layer.cpp  layer.hpp  noPropLayer.cpp  noPropLayer.hpp
src/utils/: NoPropModelTrainer.hpp  SimpleModelTrainer.hpp  data_loader.cpp  data_loader.hpp  utils.cpp  utils.hpp
